[package]
name = "sample-api"
version = "0.1.0"
authors = ["Lourens Schep <lourensschep@gmail.com>"]

[dependencies]
env_logger = "0.5"
actix = "^0.5"
actix-web = "^0.6"

futures = "0.1"
failure = "0.1.1"
uuid = { version = "0.6", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

rusqlite = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
r2d2_sqlite = "0.5"
dotenv = "0.10"